2013-10-02  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - Added new options:
	    - -C/--cpu.
	    - --format.
	    - --indent.
	    - --indent-char.
	    - --separator.
	  - Removed bracketed partial option names since getopt_long(3) allows
	    any unique partially named option.
	* src/Makefile.am:
	  - Added check_all_args test.
	  - CFLAGS: Check for unused variables.
	* src/procenv.c:
	  - Added ability to produce output in either highly-structured text
	    (default), JSON, or XML using the --format=<format> option.

2013-09-13  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Added missing test.
	* src/procenv.c:
	  - usage():
	    - Clarify option usage.
	    - Ensure no wrapping on 80-column devices.
	  - show_rlimits():
	    - Enable RLIMIT_RTTIME on Linux.
	    - Check kernel version and defines for newer limits.
	* src/procenv.h: Cleanup.

2013-09-12  James Hunt  <james.hunt@ubuntu.com>

	* src/Makefile.am: Updated for new check_all_args test.
	* src/procenv.c:
	  - dump(): Ensure correct output ordering.
	  - Added "not implemented" stubs for FreeBSD IPC functions.
	* src/tests/show_compiler_details: Don't hard-code 'gcc' - use 'cc'
	  for maximum portability.

2013-09-11  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - Added -E/--semaphores option.
	  - Added -M/--message-queues option.
	  - Added -S/--shared-memory option.
	  - Added ref to ipcs(1).
	* src/procenv.c:
	  - Added support for displaying IPC resources (shared memory,
	    semaphores and message queues) under Linux only at this
	    stage.
	  - New utility functions: format_time(), format_perms() and
	    pid_to_name().

2013-08-30  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_stat(): Make resilient to failures.
	  - show_linux_mounts(): Show if unable to query major+minor number.
	  - show_bsd_mounts(): Show if unable to query major+minor number.
	  - get_major_minor(): Return a value rather than simply warning on