@@ -1,3 +1,10 @@
+2013-10-03  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c:
+	  - show_proc(): Improved grouping by adding more sections.
+	  - show_meta(): Show output format.
+	  - show_compiler(): Add "feature test macros" section.
+
 2013-10-02  James Hunt  <james.hunt@ubuntu.com>
 
 	* man/procenv.1:
